<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
             android:id="@+id/tableLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:stretchColumns="field"
             android:background="@drawable/main_header_selector">


    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/WELCOME"
              style="@style/HeadingFont"/>

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/How_to_use_your_menu_items"
              style="@style/HelperFont"/>
    <TableRow>
        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_nearest"
                android:contentDescription="@string/Shortcut_Spot"
                android:padding="5dip"/>

        <TextView android:text="@string/nearest_parking_immediately"
                  style="@style/MenuTextFont"/>
    </TableRow>
    <TableRow>
        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_aroundme"
                android:contentDescription="@string/Around_me"
                android:padding="5dip"/>


        <TextView android:text="@string/nearest_in_area"
                  style="@style/MenuTextFont"/>
    </TableRow>
    <TableRow>
        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_save"
                android:contentDescription="@string/Save_Spot"
                android:padding="5dip"/>

        <TextView android:text="@string/Save_current_location"
                  style="@style/MenuTextFont"/>
    </TableRow>
    <!--<TableRow>-->
        <!--<ImageView-->
                <!--android:id="@+id/imageView4"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_menu_all_spots"-->
                <!--android:contentDescription="@string/All_Spots"-->
                <!--android:padding="5dip"/>-->

        <!--<TextView android:text="@string/Show_all_spots"-->
                  <!--style="@style/MenuTextFont"/>-->
    <!--</TableRow>-->
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:textSize="20dip"
            android:textColor="#21dbd4"
            android:textStyle="bold"
            android:id="@+id/btnLogout"
            android:layout_marginTop="80dip"
            android:background="@null"/>
    
        <com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="a150c32eaac851c"
                         ads:adSize="BANNER"
                         ads:loadAdOnCreate="true"/>

</TableLayout>
