<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
             android:id="@+id/tableLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:stretchColumns="field"
             android:background="@drawable/main_header_selector">


    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            style="@style/HeadingFont"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_project"
            style="@style/HelperFont"/>

    <TableRow>

        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_nearest"
                android:contentDescription="@string/Shortcut_Spot"
                android:padding="5dip"/>

        <TextView
                android:text="@string/about_content"
                style="@style/NormalTextFont"/>

    </TableRow>

    <TableRow>

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_nearest"
                android:contentDescription="@string/Around_me"
                android:padding="5dip"/>


        <TextView
                android:text="@string/about_content_notes"
                style="@style/NormalTextFont"/>
    </TableRow>

    <TableRow>

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_nearest"
                android:contentDescription="@string/Around_me"
                android:padding="5dip"/>


        <TextView
                android:text="@string/if_interest"
                style="@style/NormalTextFont"/>
    </TableRow>

    <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adUnitId="a150c32eaac851c"
            ads:adSize="BANNER"
            ads:loadAdOnCreate="true"/>

</TableLayout>
