<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/main_header_selector">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">
        <!--  View Title Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/LOGIN"
                style="@style/HeadingFont"/>
        <!--  Email Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Username"
                style="@style/NormalTextFont"/>
        <!--  Email TextField -->
        <EditText
                android:id="@+id/loginUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                />

        <!--  Password Label -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/Password"
                style="@style/NormalTextFont"/>

        <!--  Password TextField -->
        <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:inputType="textPassword"
                />

        <!--  Error message -->
        <TextView android:id="@+id/login_error"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#e30000"
                  android:padding="10dip"
                  android:textStyle="bold"/>

        <!--  Login Button -->
        <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/Login"
                android:background="@drawable/btn_blue"
                style="@style/BtnText"/>

        <!--  Link to Registration Screen -->
        <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/I_dont_have_an_account"
                android:background="@drawable/btn_blue"
                style="@style/BtnText"/>
    </LinearLayout>

</ScrollView>